<resources>
    <string name="app_name">AppCM</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="inserttitle">Insert Title</string>
    <string name="insertdescription">Insert Description</string>
    <string name="empty_not_saved">Empty Fields</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="myNotes">My notes:</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="del">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="uSure">Are you sure that you want to delete this note?</string>
    <string name="rem">Successfully removed!</string>
    <string name="updateS">Successfully updated!</string>
    <string name="updateW">Please fill out all fields!</string>
    <string name="uSureA">Are you sure that you want to delete all notes?</string>
    <string name="success">Success!</string>
    <string name="unsuccess">Unsuccessful</string>
    <string name="createS">Note created successfully!</string>
    <string name="createW">Please fill out all fields!</string>
    <string name="usernamecheck">Username required</string>
    <string name="passwordcheck">Password required</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDO3RV3JLvgcTYvJWSTvzj-eftVF4bRMDE</string>
    <string name="pref_file_key" translatable="false">com.example.appcm.api.User</string>
    <string name="pref_is_user_login" translatable="false">isUserLogin</string>
    <string name="pref_name" translatable="false">name</string>
    <string name="pref_user_id" translatable="false">id_user</string>
    <string name="errosp">Save failed</string>
    <string name="image_upload">Upload Image</string>
    <string name="galery_image">Galery Image</string>
    <string name="problemType">Problem Type</string>
    <string name="descriptionmarker">Problem Description</string>
    <string name="description_required">Description Required</string>
    <string name="error_updating_data">Error updating data</string>
    <string name="errorwebservice">Connection error</string>
    <string name="reportproblem">Report Problem</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>