<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.update.UpdateFragment">

    <EditText
    android:id="@+id/updateTitle"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:width="350dp"
    android:ems="10"
    android:hint="@string/title"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.183" />

    <EditText
    android:id="@+id/updateDescription"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:layout_marginTop="28dp"
    android:layout_marginBottom="200dp"
    android:width="350dp"
    android:ems="10"
    android:gravity="start"
    android:hint="@string/description"
    android:inputType="textPersonName"
    android:scrollbarFadeDuration="300"
    android:textAlignment="textStart"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_default="spread"
    app:layout_constraintHorizontal_bias="0.508"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
    app:layout_constraintVertical_bias="0.0" />

    <Button
    android:id="@+id/update_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.905"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.898" />

    <TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/notes"
    android:textColor="#050505"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.089"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.067" />

    </androidx.constraintlayout.widget.ConstraintLayout>